[project]
name = "protonic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book>=1.0.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-material>=9.5.49",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
]
